                                            milliseconds.
    . CallExceptionList exceptions()     -- Returns the list of CallExceptions.
    . TargetDescriptor succeededTarget() -- Returns the target for which the
                                            call succeeded.
 - Refactored the XINSCallRequest and added new set methods.

* XINS/Java Server Framework:
  - The _GetStatistics meta-function now supports statistics per error code.
    To retrieve these details, pass "detailed=true" to this function.

* Generated CAPI classes:
  - All call methods now return a function result object, never void. This
    change is backwards compatible with XINS 1.0.
  - All function result objects now contain the call duration, the exceptions
    (if any) and a link to the succeeded target. See the changes for the
    AbstractCAPICallResult class for details.
  - Implemented SF.net RFE #1071756: The MANIFEST.MF file in generated CAPI
    JAR file now contains the version of XINS used to generate the JAR file.

* Generation of server-side Java code:
  - The MANIFEST.MF file in generated WAR file now contains the version of 
    XINS used to generate the WAR file.

* Generated Javadoc now lists the groups of packages in the following order:
  - Logdoc, Common, Client and finally Server. This should now generally be
    applied as the preferred order.

* Generation of specification documentation:
  - The num attribute for the examples is now optional.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.1.0 ALPHA 3:

* XINS/Java Common Library
  - Added class function quote(Object) to class TextUtils.

* XINS/Java Client Framework:
  - Fixed SF.net bug #1069436: No function name included in the description of
    a XINSCallRequest object and consequently in the message for
    CallExceptions for a XINS call request. Improved the XINSCallRequest
    description string.