@@ -3,7 +3,7 @@
  -*- mode: Fundamental; tab-width: 4; -*-
  ex:ts=4
 
- XSLT that generates the Result classes for the functions that return a result.
+ XSLT that generates the Result classes.
 
  $Id$
 
